Archive2/f2/8e7c661115e2e0/output
main.cpp: In function 'int main()':
main.cpp:23:20: error: 'TestFunction' was not declared in this scope
     TestFunction(p1);
                    ^
main.cpp: At global scope:
main.cpp:37:6: warning: unused parameter 'p1' [-Wunused-parameter]
 void TestFunction1(ForwardDeclared<int> *p1)
      ^
main.cpp:42:6: warning: unused parameter 'p2' [-Wunused-parameter]
 void TestFunction2(ForwardDeclared2 *p2)
      ^
